--- a/source/scss/cagov/header-banner.scss
+++ b/source/scss/cagov/header-banner.scss
@@ -27,6 +27,11 @@
     min-width: 100%;
     min-height: 100%;
     position: relative;
+    @media (max-width: $screen-xs-max) {
+        height: unset;
+        padding-top: 70px;
+        padding-bottom: 80px;
+    }
 }
 
 .header-slideshow-banner {
