--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -861,3 +861,21 @@ table.gsc-search-box td {
         display: none;
     }
 }
+
+/* MOBILE SEARCH */
+
+#head-search {
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    padding: 10px !important;
+    .gsc-search-button {
+        right: 50px !important;
+        outline-offset: -2px;
+    }
+    .close-search-btn {
+        display: block !important;
+    }
+    @media (min-width: $screen-md-min) {
+        display: none;
+    }
+}
