--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -27,7 +27,6 @@
         border-bottom-right-radius: 7px;
         overflow: hidden;
 
-
         &:focus {
             width: 160px;
             height: 27px;
@@ -35,15 +34,16 @@
     }
 }
 
-.global-header { // Extends bootstrap .container class to .global-header
+.global-header {
+    // Extends bootstrap .container class to .global-header
     position: relative; // Allows children to be absolute positioned within .global-header
     z-index: 1;
     padding: 0;
     background: $white;
     width: auto;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); // Beta 6.0 addition
-    -moz-box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); // Beta 6.0 addition
-    box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); // Beta 6.0 addition
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(189, 189, 189, 0.4); // Beta 6.0 addition
+    -moz-box-shadow: 0px 0px 15px 0px rgba(189, 189, 189, 0.4); // Beta 6.0 addition
+    box-shadow: 0px 0px 15px 0px rgba(189, 189, 189, 0.4); // Beta 6.0 addition
     @media (min-width: $screen-md-min) {
         // Hide mobile controls in desktop view
         .mobile-controls {
@@ -52,12 +52,9 @@
     }
 }
 
-
-
 //
 // BRANDING
 // --------------------------------------------------
-
 
 .branding {
     @include container;
@@ -84,12 +81,12 @@
             object-fit: contain !important;
             object-position: left;
 
-            @media (max-width: $screen-md) and (min-width: $screen-sm-min) { // Beta 5.0 addition
+            @media (max-width: $screen-md) and (min-width: $screen-sm-min) {
+                // Beta 5.0 addition
                 max-width: 225px;
             }
         }
 
-        
         // Move logo above navigation
         a {
             display: inline-block;
@@ -101,7 +98,7 @@
 
             .logo-assets {
                 display: flex;
-                align-items:center;
+                align-items: center;
                 height: 80px;
 
                 .logo-img {
@@ -109,73 +106,70 @@
                     width: 80px;
                     height: auto;
                     display: inline-block;
-                    transition: all .3s;
+                    transition: all 0.3s;
                 }
-            
+
                 .logo-text {
                     padding-left: 5px;
                     .logo-state {
-                        font-size: 1rem; 
+                        font-size: 1rem;
                         font-family: "Asap Condensed", sans-serif;
-                        margin: 0; 
+                        margin: 0;
                         padding: 0;
                         color: $gray-dark;
                         height: 20px;
                         line-height: 1.2em;
-                        transition: all .3s;
+                        transition: all 0.3s;
                         display: block;
-                     @media (max-width: $screen-xs-max) { 
-                         margin-top: 5px;
-                        font-size: .9rem;
-                       }
+                        @media (max-width: $screen-xs-max) {
+                            margin-top: 5px;
+                            font-size: 0.9rem;
+                        }
                     }
                     .logo-dept {
                         font-size: 1.54rem;
                         font-family: "Asap Condensed", sans-serif;
                         font-weight: 700;
-                        margin: 0; 
+                        margin: 0;
                         padding: 0;
                         color: $gray-dark;
                         height: 24px;
                         line-height: 1.2em;
-                       transition: all .3s;
-                       display: block;
-                       @media (max-width: $screen-xs-max) { 
-                        font-size: 1.1rem;
-                        min-width: 200px;
-                       }
+                        transition: all 0.3s;
+                        display: block;
+                        @media (max-width: $screen-xs-max) {
+                            font-size: 1.1rem;
+                            min-width: 200px;
+                        }
                     }
                 }
             }
         }
 
-        @media (max-width: $screen-sm-max) { // Beta 5.0 addition
+        @media (max-width: $screen-sm-max) {
+            // Beta 5.0 addition
             position: absolute;
             margin-top: -5px;
-            padding-right: 150px;
         }
     }
-// Goes full width on 767 breakpoint
-    @media (max-width: $screen-xs-max) { 
-        max-width:100%;
+    // Goes full width on 767 breakpoint
+    @media (max-width: $screen-xs-max) {
+        max-width: 100%;
     }
 }
-
-    
-
 
 // FIXED HEADER LOGO
 .fixed.compact .branding .header-organization-banner {
     .logo-assets {
         height: 60px;
-    
+
         .logo-img {
             width: 70px;
         }
-    
+
         .logo-text {
             .logo-state {
-                font-size: .8rem; 
+                font-size: 0.8rem;
                 line-height: 1em;
                 height: 16px;
                 min-width: 200px;
@@ -188,8 +182,6 @@
         }
     }
 }
-
-
 
 //
 // MOBILE
@@ -213,7 +205,9 @@
     }
 }
 
-.header-single-banner, .header-large-banner, .header-primary-banner {
+.header-single-banner,
+.header-large-banner,
+.header-primary-banner {
     width: 100%;
     /* Will be overriden with js */
     height: auto;
@@ -223,7 +217,7 @@
     display: block;
     /* Preserve aspect ratio */
     min-width: 100%;
-    min-height: 100%
+    min-height: 100%;
 }
 
 .header-slideshow-banner {
@@ -242,13 +236,11 @@
     height: 100%;
 }
 
-
 .nav-full-width-icons {
     a {
-
         .logo-assets {
             display: flex;
-            align-items:center;
+            align-items: center;
             height: 55px;
 
             .logo-img {
@@ -256,35 +248,33 @@
                 width: 80px;
                 height: auto;
                 display: inline-block;
-                transition: all .3s;
+                transition: all 0.3s;
             }
-        
+
             .logo-text {
                 padding-left: 5px;
                 .logo-state {
-                    font-size: .9rem; 
+                    font-size: 0.9rem;
                     font-family: "Asap Condensed", sans-serif;
-                    margin: 0; 
+                    margin: 0;
                     padding: 0;
                     color: $white;
                     height: 17px;
                     line-height: 1em;
-                    transition: all .3s;
+                    transition: all 0.3s;
                     display: block;
-                
                 }
                 .logo-dept {
                     font-size: 1.4rem;
                     font-family: "Asap Condensed", sans-serif;
                     font-weight: 700;
-                    margin: 0; 
+                    margin: 0;
                     padding: 0;
                     color: $white;
                     height: 24px;
                     line-height: 1em;
-                   transition: all .3s;
-                   display: block;
-                   
+                    transition: all 0.3s;
+                    display: block;
                 }
             }
         }
